--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 body {
   margin: 0;
-  min-width: 600px;
+  width: 920px;
   font-family: 'Gentium Basic', serif;
   font-size: 16px;
 }
@@ -11,7 +11,6 @@ body {
 .copy {
   margin-right: 40px;
   margin-left: auto;
-  background: rgba(255,255,255,0.9);
   width: 400px;
   z-index: 100;
   position: relative;
